--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.scm.corp.ebay.com/cpenkar/net-morphic"
   },
   "engines": {
-    "node": ""
+    "node": ">=0.8.6"
   },
   "main": "net-morphic.js",
   "dependencies": {
