--- a/configs/tcp.sample.config.json
+++ b/configs/tcp.sample.config.json
@@ -10,16 +10,16 @@
 		"host" : "127.0.0.1",
 		"port" : 8124,
 		"proxy host" : "127.0.0.1",
-		"proxy port" : 10001,
+		"proxy port" : 10002,
 		"type" : "slow",
-		"latency" : 1000
+		"latency" : 5000
 	},
-	"ebay gold api": {
+	"ebay pins api": {
 		"host" : "127.0.0.1",
 		"port" : 8124,
 		"proxy host" : "127.0.0.1",
-		"proxy port" : 10001,
-		"type" : "flakey",
+		"proxy port" : 10004,
+		"type" : "drop",
 		"lo" : 1000,
 		"high" : 5000
 	},
@@ -27,9 +27,9 @@
 		"host" : "127.0.0.1",
 		"port" : 8124,
 		"proxy host" : "127.0.0.1",
-		"proxy port" : 10001,
-		"type" : "drop",
-		"lo" : 100,
-		"high" : 1000
+		"proxy port" : 10004,
+		"type" : "bumpy",
+		"lo" : 3500,
+		"high" : 7000
 	}
 }
