--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodeunit":"0.7.4",
 	"since-when":"0.4.7",
 	"router":"0.6.2",
-	"pause-stream":""
+	"pause-stream":"", 
+	"express":"2.5.11"
   },
   "devDependencies": {
     "nodeunit": ""
