--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	"since-when":"0.4.7",
 	"router":"0.6.2",
 	"pause-stream":"", 
-	"express":"2.5.11"
+	"express":"2.5.11",
+	"traverse", ""
   },
   "devDependencies": {
     "nodeunit": ""
