--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "shimonchayim",
-  "name": "net-morphic",
+  "name": "netmorphic",
   "version": "0.1.10",
   "repository": {
     "type": "git",
