--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "shimonchayim",
   "name": "netmorphic",
-  "version": "0.1.12",
+  "version": "0.1.14",
   "repository": {
     "type": "git",
     "url": "https://github.scm.corp.ebay.com/cpenkar/net-morphic"
@@ -24,7 +24,8 @@
 	"pause-stream":"", 
 	"express":"2.5.11",
 	"traverse": "",
-	"node-uuid": ""
+	"node-uuid": "",
+	"scuttlebutt":""
   },
   "devDependencies": {
     "nodeunit": ""
