--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"certify" : "echo ./bin/certify"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT"
 }
