--- a/package.json
+++ b/package.json
@@ -13,28 +13,23 @@
     "dependencies": {
         "underscore": "1.4.0",
         "http-proxy": "0.8.3",
-        "optimist": "0.3.4",
-        "mime": "1.2.7",
         "filed": "0.0.7",
-        "connect": "2.5.0",
         "cluster2": "0.3.6",
-        "nodeunit": "0.7.4",
-        "since-when": "0.4.7",
         "router": "0.6.2",
         "pause-stream": "0.0.9",
         "express": "2.5.11",
-        "traverse": "0.6.3",
         "node-uuid": "1.4.0",
         "scuttlebutt": "5.5.15",
         "ecstatic": "0.4.0",
-        "through": "2.2.0",
-        "event-stream": "3.0.11",
-        "from": "0.1.2",
-        "ssl-keygen": "0.1.1"
+        "event-stream": "3.0.11"
     },
     "devDependencies": {
-        "nodeunit": "",
-        "clone": ""
+        "since-when": "0.4.7",
+        "through": "2.2.0",
+        "nodeunit": "0.7.4",
+        "clone": "0.1.6",
+        "from": "0.1.2",
+        "ssl-keygen": "0.1.1"
     },
     "description": "Netmorphic is a library for testing networked applications, such as REST clients over HTTP, and database clients over TCP.",
     "directories": {
